Update Sign up Tokens
